--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
   <p style="text-align: justify;">
   Broadly, my research interests lie in the intersection of <b style="color:blueviolet">natural language processing (NLP)</b>, <b style="color:blue">human-AI interaction</b>, and <b style="color:chocolate">education</b>. 
   In particular, I aim to develop and evaluate <b>human-AI collaborative systems</b> for educational support (e.g., writing) powered by <b style="color:blueviolet">large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
-  Also, I am interested in developing socially-aware natural language processing (NLP) technologies that better aligns with human behaviors and promote <b>diversity and equity</b> in modern NLP technologies.  
+  Also, I am interested in developing socially-aware natural language processing (NLP) technologies that better <b>aligns with human reasoning</b> and promote <b>diversity and equity</b> in modern NLP technologies.  
   
   Before joining UMN, I used to conduct research on addressing health disparity issues from social media texts using data mining and NLP approaches. 
   </p>
