update job status

--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@ title: Home
 <div class="docs-section" id="about">
   <h4>Hello!</h4>
   <p style="text-align: justify;">
-  I am currently a visiting researcher in Minnesota NLP group at University of Minnesota Twin Cities (UMN), advised by <a href="https://dykang.github.io/">Prof. Dongyeop Kang</a>. 
+  I am a full-time research staff at University of Massachusetts Lowell (UMass Lowell), supervised by <a href="https://bio-nlp.org/">Prof. Hong Yu</a>. 
   Previously, I obtained my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, and Master's degree in Computer Science at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
+  After graduation, I worked as a visting researcher from 2023-2024 at University of Minnesota Twin Cities, advised by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>.
   </p>
 
   <p style="text-align: justify;">
-  Broadly, my research interests lie in the intersection of <b style="color:blueviolet">natural language processing (NLP)</b>, <b style="color:blue">human-AI interaction</b>, and <b style="color:chocolate">education</b>. 
-  In particular, I aim to develop and evaluate <b>human-AI collaborative systems</b> for educational support (e.g., writing) powered by <b style="color:blueviolet">large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
-  Also, I am interested in developing socially-aware natural language processing (NLP) technologies that better <b>aligns with human reasoning</b> and promote <b>diversity and equity</b> in modern NLP technologies.  
-  
-  Before joining UMN, I used to conduct research on addressing health disparity issues from social media texts using data mining and NLP approaches. 
+   
+  Before joining UMass, I used to conduct research on addressing health disparity issues from social media texts using data mining and NLP approaches during my master's studies. 
+  Also during my time at UMN, I extensively explored the fields of <b style="color:blueviolet">natural language processing (NLP)</b> and <b style="color:blue">human-AI interaction</b>.
+  In particular, I developed and evaluated <b>human-AI collaborative systems</b> for educational support (e.g., writing) powered by <b style="color:blueviolet">large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
+  Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>alignsed with human reasoning</b> and promoted <b>diversity and equity</b>. 
   </p>
 
-  <p> <b style="color: red;">Note</b>: <b>I am looking for full-time research or job opportunities starting Summer 2024!</b> Here is my full <a href="https://drive.google.com/file/d/1HuYqGyE4MWmDj-gTUhMFsSgSPJFnNPgr/view?usp=sharing">CV</a>.</p>
+  <p> Here is my full <a href="https://drive.google.com/file/d/1HuYqGyE4MWmDj-gTUhMFsSgSPJFnNPgr/view?usp=sharing">CV</a>.</p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
@@ -71,6 +72,10 @@ title: Home
   <h4>Updates</h4>
   <div style="height:300px; width:auto; border:1px solid #ccc; overflow:auto;">
     <ul>
+      <li>
+        <b style="color:cadetblue">[Aug. 2024]</b> &nbsp&nbsp
+        Elated to announce that I accepted an offer as a full-time research staff at University of Massachusetts Lowell! </b>!
+      </li>
       <li>
         <b style="color:cadetblue">[May. 2024]</b> &nbsp&nbsp
         Our <a href="https://arxiv.org/pdf/2309.17012.pdf">preprint</a> about benchmarking LLM evaluations on cognitive biases are accepted to <b>Findings of ACL 2024</b>!
