--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
 
   <p style="text-align: justify;">
    
-  Before joining UMass, I used to conduct research on addressing health disparity issues from social media texts using data mining and NLP approaches during my master's studies. 
+  Before joining UMass, I used to conduct research on addressing <b style="color:chocolate">health disparity issues from social media texts </b> using data mining and NLP approaches during my master's studies. 
   Also during my time at UMN, I extensively explored the fields of <b style="color:blueviolet">natural language processing (NLP)</b> and <b style="color:blue">human-AI interaction</b>.
   In particular, I developed and evaluated <b>human-AI collaborative systems</b> for educational support (e.g., writing) powered by <b style="color:blueviolet">large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
   Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>alignsed with human reasoning</b> and promoted <b>diversity and equity</b>. 
