--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ title: Home
     <ul>
       <li>
         <b style="color:cadetblue">[Aug. 2024]</b> &nbsp&nbsp
-        Elated to announce that I accepted an offer as a full-time research staff at University of Massachusetts Lowell! </b>!
+        Elated to announce that I accepted an offer as a full-time research staff at University of Massachusetts Lowell! </b>
       </li>
       <li>
         <b style="color:cadetblue">[May. 2024]</b> &nbsp&nbsp
@@ -119,11 +119,88 @@ title: Home
   </p>
 
   <ul class="tab-nav">
-    <li><div class="button active" data-ref="#papers-selected">Selected</div></li>
+    <li><div class="button active" data-ref="#papers-2024">2024</div></li>
+    <li><div class="button" data-ref="#papers-2023">2023</div></li>
     <li><div class="button" data-ref="#papers-all">All</div></li>
   </ul>
 
+  <!-- 2024 -->
   <div class="tab-content">
+    <div class="tab-pane active" id="papers-2024">
+      {% assign papers_2024 = site.data.publications.papers | where: "year", "2024" %}
+      {% for paper in papers_2024 %}
+        <div class="paper">
+          <p class="title"><b>{{ paper.title }}</b></p>
+          <p>{{ paper.authors }}</p>
+          <p><i>{{ paper.venue }}</i></p>
+           <div class="paper-buttons">
+            {% if paper.paper_pdf %}
+              <a class="button" href="{{ paper.paper_pdf | prepend: site.baseurl }}" target="_blank">Paper</a>
+            {% endif %}
+
+            {% if paper.slides %}
+              <a class="button" href="{{ paper.slides | prepend: site.baseurl }}" target="_blank">Slides</a>
+            {% endif %}
+
+            {% if paper.poster %}
+              <a class="button" href="{{ paper.poster | prepend: site.baseurl }}" target="_blank">Poster</a>
+            {% endif %}
+
+            {% if paper.video %}
+              <a class="button" href="{{ paper.video }}" target="_blank">Video</a>
+            {% endif %}
+
+            {% if paper.code %}
+              <a class="button" href="{{ paper.code }}" target="_blank">Code</a>
+            {% endif %}
+
+            {% if paper.data %}
+              <a class="button" href="{{ paper.data }}" target="_blank">Data</a>
+            {% endif %}
+
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+
+    <div class="tab-pane" id="papers-2023">
+      {% assign papers_2023 = site.data.publications.papers | where: "year", "2023" %}
+      {% for paper in papers_2023 %}
+        <div class="paper">
+          <p class="title"><b>{{ paper.title }}</b></p>
+          <p>{{ paper.authors }}</p>
+          <p><i>{{ paper.venue }}</i></p>
+           <div class="paper-buttons">
+            {% if paper.paper_pdf %}
+              <a class="button" href="{{ paper.paper_pdf | prepend: site.baseurl }}" target="_blank">Paper</a>
+            {% endif %}
+
+            {% if paper.slides %}
+              <a class="button" href="{{ paper.slides | prepend: site.baseurl }}" target="_blank">Slides</a>
+            {% endif %}
+
+            {% if paper.poster %}
+              <a class="button" href="{{ paper.poster | prepend: site.baseurl }}" target="_blank">Poster</a>
+            {% endif %}
+
+            {% if paper.video %}
+              <a class="button" href="{{ paper.video }}" target="_blank">Video</a>
+            {% endif %}
+
+            {% if paper.code %}
+              <a class="button" href="{{ paper.code }}" target="_blank">Code</a>
+            {% endif %}
+
+            {% if paper.data %}
+              <a class="button" href="{{ paper.data }}" target="_blank">Data</a>
+            {% endif %}
+
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+
+  <!-- <div class="tab-content">
     <div class="tab-pane active" id="papers-selected">
       {% assign selected_papers = site.data.publications.papers | where: "selected", "y" %}
       {% for paper in selected_papers %}
@@ -159,7 +236,7 @@ title: Home
           </div>
         </div>
       {% endfor %}
-    </div>
+    </div> -->
 
     <div class="tab-pane" id="papers-all">
       {% for paper in site.data.publications.papers %}
