--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ title: Home
               {% endif %}
             </p>
             <p>{{ paper.authors }}</p>
-            <p><i>{{ paper.venue }}</i></p>
+            <p><b style="color:blue"><i>{{ paper.venue }}</i></b></p>
              <div class="paper-buttons">
             </div>
           </div>
