--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@ title: Home
   After graduation, I worked as a visting researcher from 2023-2024 at University of Minnesota Twin Cities, advised by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>.
   </p>
 
+  <h4>Research Areas</h4>
   <p style="text-align: justify;">
-  Before joining UMass, I used to conduct research on addressing <b style="color:chocolate">health disparity issues from social media texts </b> using data mining and NLP approaches during my master's studies. 
+  My research interests draws upon the entire theme of <b>developing and evaluating AI-powered systems that enhance the well-being of marginalized populations, especially in education and healthcare settings.</b>
+  <ul>
+    <li><b style="color:chocolate">NLP for disparity</b> -- mining health outcomes from social media texts, LLMs for scholarly writing support, diversity-aware LLMs, etc. </li>
+    <li><b style="color:blueviolet"> Human-AI collaboration for education</b> -- expert-level knolwedge extraction with LLMs</li>
+    <li><b style="color:dodgerblue">Statistical modeling of public resource accessibility and health risk factors</li>
+  </ul>
+  <!-- Before joining UMass, I used to conduct research on addressing <b style="color:chocolate">health disparity issues from social media texts </b> using data mining and NLP approaches during my master's studies. 
   Also during my time at UMN, I extensively explored the fields of <b style="color:blueviolet">natural language processing (NLP)</b> and <b style="color:blue">human-AI interaction</b>.
   In particular, I developed and evaluated <b>human-AI collaborative systems</b> for educational support (e.g., writing) powered by <b style="color:blueviolet">large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
-  Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>aligned with human reasoning</b> and promoted <b>diversity and equity</b>. 
+  Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>aligned with human reasoning</b> and promoted <b>diversity and equity</b>.  -->
   </p>
 
   <p> Here is my full <a href="https://drive.google.com/file/d/1HuYqGyE4MWmDj-gTUhMFsSgSPJFnNPgr/view?usp=sharing">CV</a>.</p>
