--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@ title: Home
 
   <h4>Research Areas</h4>
   <p style="text-align: justify;">
-  My research interests draws upon the entire theme of <b>developing and evaluating AI-powered systems that enhance the well-being of marginalized populations, especially in education and healthcare settings.</b>
+  My research interests draws upon the entire theme of <b>developing and evaluating AI-powered systems that enhance the well-being of marginalized populations, 
+    especially in <mark>education</mark> and <mark>healthcare</mark> settings.</b>
   <ul>
-    <li><b style="color:chocolate">NLP for disparity</b> -- mining health outcomes from social media texts, LLMs for scholarly writing support, diversity-aware LLMs, etc. </li>
+    <li><b style="color:chocolate">NLP for disparity</b> -- mining health outcomes from social media texts, LLMs for scholarly writing support, diversity-aware LLMs</li>
     <li><b style="color:blueviolet"> Human-AI collaboration for education</b> -- expert-level knolwedge extraction with LLMs</li>
-    <li><b style="color:dodgerblue">Statistical modeling of public resource accessibility and health risk factors</li>
+    <li><b style="color:deeppink">Statistical modeling of public resource accessibility and health risk factors</b></li>
   </ul>
   <!-- Before joining UMass, I used to conduct research on addressing <b style="color:chocolate">health disparity issues from social media texts </b> using data mining and NLP approaches during my master's studies. 
   Also during my time at UMN, I extensively explored the fields of <b style="color:blueviolet">natural language processing (NLP)</b> and <b style="color:blue">human-AI interaction</b>.
