--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ title: Home
     especially in <mark>education</mark> and <mark>healthcare</mark> settings.</b>
   <ul>
     <li><b style="color:chocolate">NLP for disparity</b> -- mining health outcomes from social media texts, LLMs for scholarly writing support, diversity-aware LLMs</li>
-    <li><b style="color:blueviolet"> Human-AI collaboration for education</b> -- expert-level knolwedge extraction with LLMs</li>
-    <li><b style="color:deeppink">Statistical modeling of public resource accessibility and health risk factors</b></li>
+    <li><b style="color:rgb(49, 123, 119)"> Human-AI collaboration for education</b> -- expert-level knolwedge extraction with LLMs</li>
+    <li><b style="color:darkslateblue">Statistical modeling of public resource accessibility and health risk factors</b></li>
   </ul>
   <!-- Before joining UMass, I used to conduct research on addressing <b style="color:chocolate">health disparity issues from social media texts </b> using data mining and NLP approaches during my master's studies. 
   Also during my time at UMN, I extensively explored the fields of <b style="color:blueviolet">natural language processing (NLP)</b> and <b style="color:blue">human-AI interaction</b>.
