--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Home
   Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>aligned with human reasoning</b> and promoted <b>diversity and equity</b>.  -->
   </p>
 
-  <p> Here is my full <a href="https://drive.google.com/file/d/1HuYqGyE4MWmDj-gTUhMFsSgSPJFnNPgr/view?usp=sharing">CV</a>.</p>
+  <p> Here is my full <a href="https://drive.google.com/file/d/1zZN4rG0A3kDeQH57R_uMAzWjvXIA8EP9/view?usp=sharing">CV [Updated August 2024]</a>.</p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
