--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@ title: Home
 <div class="docs-section" id="about">
   <h4>Hello!</h4>
   <p style="text-align: justify;">
-  I am a full-time research staff at University of Massachusetts Lowell (UMass Lowell), supervised by <a href="https://bio-nlp.org/">Prof. Hong Yu</a>. 
-  Previously, I obtained my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, and Master's degree in Computer Science at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
-  After graduation, I worked as a visting researcher from 2023-2024 at University of Minnesota Twin Cities, advised by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>.
+  I am a full-time research staff member at University of Massachusetts Lowell (UMass Lowell), working under the guidance of <a href="https://bio-nlp.org/">Prof. Hong Yu</a>. 
+  I earned my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, followed by a Master's degree in Computer Science from <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
+  From 2023-2024, I served as a visting researcher at University of Minnesota Twin Cities, where I was mentored by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>.
   </p>
 
   <br>
+
   <h5>Research Areas</h5>
   <p style="text-align: justify;">
-  My research interests draws upon the entire theme of <b>developing and evaluating AI-powered systems that enhance the well-being of marginalized populations, 
-    especially in <mark>education</mark> and <mark>healthcare</mark> settings.</b>
+  My research is centered on <b>developing and evaluating AI-powered systems that aim to improve the well-being of marginalized communities,
+    with a focus on <mark>education</mark> and <mark>healthcare</mark> settings.</b>
   <ul>
-    <li><b style="color:chocolate">NLP for disparity</b> -- mining health outcomes from social media texts, LLMs for scholarly writing support, diversity-aware LLMs</li>
-    <li><b style="color:rgb(49, 123, 119)"> Human-AI collaboration for education</b> -- expert-level knolwedge extraction with LLMs</li>
-    <li><b style="color:darkslateblue">Statistical modeling of public resource accessibility and health risk factors</b></li>
+    <li><b style="color:chocolate">Natural Language Processing for Tackling Disparity</b> -- Exploring health outcomes from social media texts, leveraging LLMs for scholarly writing support, and promoting diversity-aware language models.</li>
+    <li><b style="color:rgb(49, 123, 119)"> Human-AI Collaboration for Education</b> -- Extracting expert-level knowledge using LLMs to enhance educational outcomes.</li>
+    <li><b style="color:darkslateblue">Statistical Modeling for Clinical Knowledge Discovery</b> -- Analyzing public resource accessibility and associated health risk factors (e.g., social determinants of health).</li>
   </ul>
   <!-- Before joining UMass, I used to conduct research on addressing <b style="color:chocolate">health disparity issues from social media texts </b> using data mining and NLP approaches during my master's studies. 
   Also during my time at UMN, I extensively explored the fields of <b style="color:blueviolet">natural language processing (NLP)</b> and <b style="color:blue">human-AI interaction</b>.
@@ -27,7 +28,7 @@ title: Home
   Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>aligned with human reasoning</b> and promoted <b>diversity and equity</b>.  -->
   </p>
 
-  <p> Here is my full <a href="https://drive.google.com/file/d/1zZN4rG0A3kDeQH57R_uMAzWjvXIA8EP9/view?usp=sharing">CV [Updated August 2024]</a>.</p>
+  <p> <b>[Updated Aug 2024]</b> Here is my full <a href="https://drive.google.com/file/d/1zZN4rG0A3kDeQH57R_uMAzWjvXIA8EP9/view?usp=sharing">CV</a>.</p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
