update shirley's paper

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Home
   Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>aligned with human reasoning</b> and promoted <b>diversity and equity</b>.  -->
   </p>
 
-  <p> <b>[Updated Aug 2024]</b> Here is my full <a href="https://drive.google.com/file/d/1zZN4rG0A3kDeQH57R_uMAzWjvXIA8EP9/view?usp=sharing">CV</a>.</p>
+  <p> <b>[Updated Sep 2024]</b> Here is my full <a href="https://drive.google.com/file/d/1o0iCCQssLTOnCAso5i_tKneGu48uAwDj/view?usp=sharing">CV</a>.</p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
@@ -82,20 +82,24 @@ title: Home
   <div style="height:300px; width:auto; border:1px solid #ccc; overflow:auto;">
     <ul>
       <li>
+        <b style="color:cadetblue">[Sep. 2024]</b> &nbsp&nbsp
+        Our <a href="https://arxiv.org/abs/2311.09799">preprint </a> about diversity extraction from LLMs is accepted to <b>EMNLP 2024</b>!
+      </li>
+      <li>
         <b style="color:cadetblue">[Aug. 2024]</b> &nbsp&nbsp
-        Elated to announce that I accepted an offer as a full-time research staff at University of Massachusetts Lowell! </b>
+        I accepted an offer as a full-time research staff at University of Massachusetts Lowell! </b>
       </li>
       <li>
         <b style="color:cadetblue">[May. 2024]</b> &nbsp&nbsp
-        Our <a href="https://arxiv.org/pdf/2309.17012.pdf">preprint</a> about benchmarking LLM evaluations on cognitive biases are accepted to <b>Findings of ACL 2024</b>!
+        Our <a href="https://arxiv.org/pdf/2309.17012.pdf">preprint</a> about benchmarking LLM evaluations on cognitive biases is accepted to <b>ACL 2024</b>!
       </li>  
       <li>
         <b style="color:cadetblue">[Mar. 2024]</b> &nbsp&nbsp
-        Elated to announce that my first NLP+HCI paper "Human-AI Collaborative Taxonomy Construction: A Case Study of Profession-specific Writing Assistants" is accepted to <b>In2Writing Workshop @ CHI 2024</b>!
+        My first <a href="https://arxiv.org/abs/2406.18675">NLP + HCI paper </a> about human-AI collaboration is accepted to <b>In2Writing Workshop @ CHI 2024</b>!
       </li>
       <li>
         <b style="color:cadetblue">[Feb. 2024]</b> &nbsp&nbsp
-        Excited to announce that our work "LocalTweet to LocalHealth: A Mental Health Surveillance Framework Based on Twitter Data" is accepted to <b>LREC-COLING 2024</b>!
+        Our work "LocalTweet to LocalHealth: A Mental Health Surveillance Framework Based on Twitter Data" is accepted to <b>LREC-COLING 2024</b>!
       </li>    
       <li>
         <b style="color:cadetblue">[Jan. 2024]</b> &nbsp&nbsp
