--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ title: Home
       </li>
       <li>
         <b style="color:cadetblue">[May. 2024]</b> &nbsp&nbsp
-        Our <a href="https://arxiv.org/pdf/2309.17012.pdf">preprint</a> about benchmarking LLM evaluations on cognitive biases is accepted to <b>ACL 2024</b>!
+        Our <a href="https://arxiv.org/abs/2309.17012">preprint</a> about benchmarking LLM evaluations on cognitive biases is accepted to <b>ACL 2024</b>!
       </li>  
       <li>
         <b style="color:cadetblue">[Mar. 2024]</b> &nbsp&nbsp
@@ -99,21 +99,21 @@ title: Home
       </li>
       <li>
         <b style="color:cadetblue">[Feb. 2024]</b> &nbsp&nbsp
-        Our work "LocalTweet to LocalHealth: A Mental Health Surveillance Framework Based on Twitter Data" is accepted to <b>LREC-COLING 2024</b>!
+        Our <a href="https://arxiv.org/abs/2402.13452">paper</a> about public health surveillance using social media and machine learning is accepted to <b>LREC-COLING 2024</b>!
       </li>    
       <li>
         <b style="color:cadetblue">[Jan. 2024]</b> &nbsp&nbsp
-        A new <a href="https://arxiv.org/pdf/2401.14698.pdf">preprint</a> is out! My <b>first 1st-authored paper</b> in NLP domain! 
+        A new <a href="https://arxiv.org/abs/2401.14698">preprint</a> is out! My <b>first 1st-authored paper</b> in NLP domain! 
         Check out how various types of LLM-generated data still lacks "humanness" through several stress testing! 
       </li>    
       <li>
         <b style="color:cadetblue">[Nov. 2023]</b> &nbsp&nbsp
-        A new <a href="https://arxiv.org/pdf/2311.09799.pdf">preprint</a> is out! 
+        A new <a href="https://arxiv.org/abs/2311.09799">preprint</a> is out! 
         Check out how much our novel method of criteria-based prompting can promote diversity and inclusion in LLMs! 
       </li>      
       <li>
         <b style="color:cadetblue">[Sep. 2023]</b> &nbsp&nbsp
-        A new <a href="https://arxiv.org/pdf/2309.17012.pdf">preprint</a> about LLM evaluation is out! 
+        A new <a href="https://arxiv.org/abs/2309.17012">preprint</a> about LLM evaluation is out! 
         Check out how much LLM evaluation are affected by cognitive biases and compare it with human alignment as well! 
       </li>      
       <li>
