--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="docs-section" id="about">
   <h4>Hello!</h4>
   <p style="text-align: justify;">
-  I am a full-time research staff member at University of Massachusetts Lowell (UMass Lowell), working under the guidance of <a href="https://bio-nlp.org/">Prof. Hong Yu</a>. 
+  I am a full-time research staff at University of Massachusetts Lowell (UMass Lowell), working under the guidance of <a href="https://bio-nlp.org/">Prof. Hong Yu</a>. 
   I earned my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, followed by a Master's degree in Computer Science from <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   From 2023-2024, I served as a visting researcher at University of Minnesota Twin Cities, where I was mentored by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>.
   </p>
