--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
   <p style="text-align: justify;">
   I am a full-time research staff at University of Massachusetts Lowell (UMass Lowell), working under the guidance of <a href="https://bio-nlp.org/">Prof. Hong Yu</a>. 
   I earned my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, followed by a Master's degree in Computer Science from <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
-  From 2023-2024, I served as a visting researcher at University of Minnesota Twin Cities, where I was mentored by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>.
+  <!-- From 2023-2024, I served as a visting researcher at University of Minnesota Twin Cities, where I was mentored by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>. -->
   </p>
 
   <br>
@@ -18,9 +18,9 @@ title: Home
   My research is centered on <b>developing and evaluating AI-powered systems that aim to improve the well-being of marginalized communities,
     with a focus on <mark>education</mark> and <mark>healthcare</mark> settings.</b>
   <ul>
-    <li><b style="color:chocolate">Natural Language Processing for Tackling Disparity</b> -- Exploring health outcomes from social media texts, leveraging LLMs for scholarly writing support, and promoting diversity-aware language models.</li>
-    <li><b style="color:rgb(49, 123, 119)"> Human-AI Collaboration for Education</b> -- Extracting expert-level knowledge using LLMs to enhance educational outcomes.</li>
-    <li><b style="color:darkslateblue">Statistical Modeling for Clinical Knowledge Discovery</b> -- Analyzing public resource accessibility and associated health risk factors (e.g., social determinants of health).</li>
+    <li><b style="color:chocolate">Natural Language Processing for Tackling Social Disparity</b></li>
+    <li><b style="color:rgb(49, 123, 119)"> Human-AI Collaboration</b></li>
+    <li><b style="color:darkslateblue">Computational Epidemiology (e.g., social determinants of health and mental health outcomes)</b></li>
   </ul>
   <!-- Before joining UMass, I used to conduct research on addressing <b style="color:chocolate">health disparity issues from social media texts </b> using data mining and NLP approaches during my master's studies. 
   Also during my time at UMN, I extensively explored the fields of <b style="color:blueviolet">natural language processing (NLP)</b> and <b style="color:blue">human-AI interaction</b>.
@@ -28,7 +28,7 @@ title: Home
   Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>aligned with human reasoning</b> and promoted <b>diversity and equity</b>.  -->
   </p>
 
-  <p> <b>[Updated Sep 2024]</b> Here is my full <a href="https://drive.google.com/file/d/1o0iCCQssLTOnCAso5i_tKneGu48uAwDj/view?usp=sharing">CV</a>.</p>
+  <p> <b>[Updated Oct 2024]</b> Here is my full <a href="https://drive.google.com/file/d/1o0iCCQssLTOnCAso5i_tKneGu48uAwDj/view?usp=sharing">CV</a>.</p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
