update research areas

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@ title: Home
 
   <br>
 
-  <h5>Research Areas</h5>
+  <!-- <h5>Research Areas</h5> -->
   <p style="text-align: justify;">
-  My research is centered on <b>developing and evaluating AI-powered systems that aim to improve the well-being of marginalized communities,
-    with a focus on <mark>education</mark> and <mark>healthcare</mark> settings.</b>
-  <ul>
+  My research is centered on developing and evaluating AI-powered systems that aim to improve healthcare of marginalized communities, using <b style="color:rgb(49, 123, 119)">natural language processing (NLP)</b> and <b style="color:rgb(49, 123, 119)">human-AI interaction (HAI)</b> strategies. Also, my research focuses on identifying predictors of adverse health outcomes (e.g., social determinants of health) from <b style="color:rgb(49, 123, 119)">computational epidemiology</b> perspectives.
+  <!-- <ul>
     <li><b style="color:chocolate">Natural Language Processing for Tackling Social Disparity</b></li>
     <li><b style="color:rgb(49, 123, 119)"> Human-AI Collaboration</b></li>
     <li><b style="color:darkslateblue">Computational Epidemiology (e.g., social determinants of health and mental health outcomes)</b></li>
-  </ul>
+  </ul> -->
   <!-- Before joining UMass, I used to conduct research on addressing <b style="color:chocolate">health disparity issues from social media texts </b> using data mining and NLP approaches during my master's studies. 
   Also during my time at UMN, I extensively explored the fields of <b style="color:blueviolet">natural language processing (NLP)</b> and <b style="color:blue">human-AI interaction</b>.
   In particular, I developed and evaluated <b>human-AI collaborative systems</b> for educational support (e.g., writing) powered by <b style="color:blueviolet">large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
