--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Home
 
   <p>Currently looking for full-time data scientist or applied scientist positions with NLP specialization!</p>
 
-  <p> <b>[Updated Jan 2025]</b> Here is my full <a href="https://drive.google.com/file/d/1o0iCCQssLTOnCAso5i_tKneGu48uAwDj/view?usp=sharing">CV</a>.</p>
+  <p> <b>[Updated Jan 2025]</b> Here is my full <a href="/assets/cv/cv_feb25.pdf">CV</a>.</p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
