--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
   <p style="text-align: justify;">
   I am a full-time research staff at University of Massachusetts Lowell (UMass Lowell), working under the guidance of <a href="https://bio-nlp.org/">Prof. Hong Yu</a>. 
   I earned my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, followed by a Master's degree in Computer Science from <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
-  <!-- From 2023-2024, I served as a visting researcher at University of Minnesota Twin Cities, where I was mentored by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>. -->
+  From 2023-2024, I served as a visting researcher at University of Minnesota Twin Cities, where I was mentored by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>.
   </p>
 
   <!-- <h5>Research Areas</h5> -->
@@ -27,7 +27,7 @@ title: Home
 
   <p>Currently looking for full-time data scientist or applied scientist positions with NLP specialization!</p>
 
-  <p> <b>[Updated Jan 2025]</b> Here is my full <a href="/assets/cv/cv_feb25.pdf">CV</a>.</p>
+  <p> <b>[Updated Feb 2025]</b> Here is my full <a href="/assets/cv/cv_feb25.pdf">CV</a>.</p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
@@ -317,17 +317,17 @@ title: Home
 </div>
 
 <!-- ========== PROJECTS ==========  -->
-<!-- <div class="docs-section" id="projects">
-  <h4>Projects</h4> -->
+<div class="docs-section" id="projects">
+  <h4>Projects</h4>
 
   <!-- <p>Research Portfolio in <a href={{"/assets/cv/portfolio_website.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
 
-  <!-- <ul class="tab-nav">
+  <ul class="tab-nav">
     <li><div class="button active" data-ref="#projects-selected">Selected</div></li>
     <li><div class="button" data-ref="#projects-all">All</div></li>
-  </ul> -->
+  </ul>
 
-  <!-- <div class="tab-content">
+  <div class="tab-content">
     <div class="tab-pane active" id="projects-selected">
       {% assign selected_projects = site.data.projects.projects | where: "selected", "y" %}
       {% for project in selected_projects %}
@@ -390,16 +390,17 @@ title: Home
     </div>
   </div>
 
-</div> -->
+</div>
 
 
 <!-- ========== RESUME ========== -->
-<div class="docs-section" id="resume">
+
+
+<!-- <div class="docs-section" id="resume">
   <h4>Vitæ</h4>
 
-  <!-- <p>Full Resume in <a href={{ "/assets/cv/MinhwaLee_Jan2023.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
+  <p>Full Resume in <a href={{ "/assets/cv/MinhwaLee_Jan2023.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
 
-  <!-- The Timeline -->
   <ul class="timeline">
     {% for exp in site.data.experience.experiences %}
     <li>
@@ -417,7 +418,7 @@ title: Home
     </li>
     {% endfor %}
   </ul>
-</div>
+</div> -->
 
 This website was built based on a template by <a href="http://www.martinsaveski.com/"> Prof. Martin Saveski</a>. Thank you for sharing!
 
