--- a/index.html
+++ b/index.html
@@ -320,14 +320,14 @@ title: Home
 <div class="docs-section" id="projects">
   <h4>Projects</h4>
 
-  <!-- <p>Research Portfolio in <a href={{"/assets/cv/portfolio_website.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
+  <p>Research Portfolio in <a href={{"/assets/cv/portfolio_website.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
 
   <ul class="tab-nav">
     <li><div class="button active" data-ref="#projects-selected">Selected</div></li>
     <li><div class="button" data-ref="#projects-all">All</div></li>
   </ul>
 
-  <div class="tab-content">
+  <!-- <div class="tab-content">
     <div class="tab-pane active" id="projects-selected">
       {% assign selected_projects = site.data.projects.projects | where: "selected", "y" %}
       {% for project in selected_projects %}
@@ -390,7 +390,7 @@ title: Home
     </div>
   </div>
 
-</div>
+</div> -->
 
 
 <!-- ========== RESUME ========== -->
