--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@ title: Home
 </div>
 
 <!-- ========== PROJECTS ==========  -->
-<div class="docs-section" id="projects">
+ 
+<!-- <div class="docs-section" id="projects">
   <h4>Projects</h4>
 
   <p>Research Portfolio in <a href={{"/assets/cv/portfolio_website.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
@@ -327,7 +328,7 @@ title: Home
     <li><div class="button" data-ref="#projects-all">All</div></li>
   </ul>
 
-  <!-- <div class="tab-content">
+  <div class="tab-content">
     <div class="tab-pane active" id="projects-selected">
       {% assign selected_projects = site.data.projects.projects | where: "selected", "y" %}
       {% for project in selected_projects %}
