--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@ title: Home
 ---
 <!-- ========== BIO ========== -->
 <div class="docs-section" id="about">
-  <h4>Hello!</h4>
+  <h4>Welcome!</h4>
   <p style="text-align: justify;">
-  I am a full-time research staff at University of Massachusetts Lowell (UMass Lowell), working under the guidance of <a href="https://bio-nlp.org/">Prof. Hong Yu</a>. 
-  I earned my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, followed by a Master's degree in Computer Science from <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
-  From 2023-2024, I served as a visting researcher at University of Minnesota Twin Cities, where I was mentored by <a href="https://minnesotanlp.github.io/">Prof. Dongyeop Kang</a>.
+  
+  I am a Generative AI Engineer at <a href="https://www.citiustech.com/">CitiusTech</a>, specialized in healthcare AI.
+  I am currently based in a Minneapolis-St.Paul area, Minnesota. 
+  I am interested in designing and building AI solutions to provide better healthcare services using large language models (LLMs). 
+  In my previous life, I was a full-time research staff member at University of Massachusetts Lowell (2024-2025) and University of Minnesota (2023-2024). 
+  Before that, I earned my Master's in Computer Science from <a href="https://www.umass.edu/">University of Massachusetts Amherst</a> in 2023 and Bachelor's in CS/Math from from <a href="https://wooster.edu/">The College of Wooster</a> in 2021.
   </p>
 
   <!-- <h5>Research Areas</h5> -->
-  <p style="text-align: justify;">
+  <!-- <p style="text-align: justify;"> -->
   <!-- My research is centered on developing and evaluating AI-powered systems that aim to improve healthcare of marginalized communities, using <b style="color:rgb(49, 123, 119)">natural language processing (NLP)</b> and <b style="color:rgb(49, 123, 119)">human-AI interaction (HAI)</b> strategies. Also, my research focuses on identifying predictors of adverse health outcomes (e.g., social determinants of health) from <b style="color:rgb(49, 123, 119)">computational epidemiology</b> perspectives. -->
   <!-- <ul>
     <li><b style="color:chocolate">Natural Language Processing for Tackling Social Disparity</b></li>
@@ -23,9 +26,9 @@ title: Home
   Also during my time at UMN, I extensively explored the fields of <b style="color:blueviolet">natural language processing (NLP)</b> and <b style="color:blue">human-AI interaction</b>.
   In particular, I developed and evaluated <b>human-AI collaborative systems</b> for educational support (e.g., writing) powered by <b style="color:blueviolet">large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
   Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>aligned with human reasoning</b> and promoted <b>diversity and equity</b>.  -->
-  </p>
+  <!-- </p> -->
 
-  <p>Currently looking for full-time data scientist or applied scientist positions with NLP specialization!</p>
+  <p>Open to full-time AI engineer opportunities in the U.S., with NLP specializations in healtchare! </p>
 
   <p> <b>[Updated Feb 2025]</b> Here is my full <a href="/assets/cv/cv_feb25.pdf">CV</a>.</p>
 
@@ -80,6 +83,11 @@ title: Home
   <h4>Updates</h4>
   <div style="height:300px; width:auto; border:1px solid #ccc; overflow:auto;">
     <ul>
+      <li>
+        <b style="color:cadetblue">[Apr. 2025]</b> &nbsp&nbsp
+        Starting a new position as an AI software engineer at CitiusTech, a healthcare AI company in the U.S. 
+        I will be working on automating LLM evaluation framework.
+      </li>
       <li>
         <b style="color:cadetblue">[Feb. 2025]</b> &nbsp&nbsp
         A new <a href="https://arxiv.org/abs/2502.02904">preprint</a> is out! We study the cognitive process of scholarly writing as a basis of future AI writing assistant development! </b>
