--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Home
   Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>aligned with human reasoning</b> and promoted <b>diversity and equity</b>.  -->
   <!-- </p> -->
 
-  <p>Open to full-time AI engineer opportunities in the U.S., with NLP specializations in healtchare! </p>
+  <p>Open to full-time AI engineer opportunities in the U.S., with NLP specializations in healthcare areas! </p>
 
   <p> <b>[Updated Feb 2025]</b> Here is my full <a href="/assets/cv/cv_feb25.pdf">CV</a>.</p>
 
@@ -80,12 +80,12 @@ title: Home
 
 <!-- ========== News ========== -->
 <div class="docs-section" id="news">
-  <h4>Updates</h4>
+  <h4>Announcements</h4>
   <div style="height:300px; width:auto; border:1px solid #ccc; overflow:auto;">
     <ul>
       <li>
         <b style="color:cadetblue">[Apr. 2025]</b> &nbsp&nbsp
-        Starting a new position as an AI software engineer at CitiusTech, a healthcare AI company in the U.S. 
+        Starting a new position as an AI software engineer at <a href="https://www.citiustech.com/">CitiusTech</a>, a healthcare AI company in the U.S. 
         I will be working on automating LLM evaluation framework.
       </li>
       <li>
