--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ title: Home
   <h4>Welcome!</h4>
   <p style="text-align: justify;">
   
-  I am a Generative AI Engineer at <a href="https://www.citiustech.com/">CitiusTech</a>, specialized in healthcare AI.
-  I am currently based in a Minneapolis-St.Paul area, Minnesota. 
-  I am interested in designing and building AI solutions to provide better healthcare services using large language models (LLMs). 
-  In my previous life, I was a full-time research staff member at University of Massachusetts Lowell (2024-2025) and University of Minnesota (2023-2024). 
+  Currently, I am working as an AI Engineer at <a href="https://www.mayoclinic.org/">Mayo Clinic</a>, through <a href="https://www.citiustech.com/">CitiusTech</a>, Inc. My speciality lies in healthcare AI for medical provider operations using large language models (LLMs). 
+
+  Prior to joining Mayo Clinic, I was a full-time researcher at UMass Lowell and University of Minnesota, studying natural language processing (NLP) and human-computer interaction (HCI). My expertise lies in large language models (LLMs) evaluation & alignment, human-AI collaboration for LLM domain specialization, and AI solution development for real-world business challenges. With 4 years of professional AI experience, I have published several papers in top-tier AI conferences, such as ACL, EMNLP, COLING, and CHI. Please refer to my google scholar profile. 
+
   Before that, I earned my Master's in Computer Science from <a href="https://www.umass.edu/">University of Massachusetts Amherst</a> in 2023 and Bachelor's in CS/Math from from <a href="https://wooster.edu/">The College of Wooster</a> in 2021.
   </p>
 
@@ -85,8 +85,7 @@ title: Home
     <ul>
       <li>
         <b style="color:cadetblue">[Apr. 2025]</b> &nbsp&nbsp
-        Starting a new position as an AI software engineer at <a href="https://www.citiustech.com/">CitiusTech</a>, a healthcare AI company in the U.S. 
-        I will be working on automating LLM evaluation framework.
+        Starting a new full-time position as an AI engineer at <a href="https://www.mayoclinic.org/">Mayo Clinic</a>.
       </li>
       <li>
         <b style="color:cadetblue">[Feb. 2025]</b> &nbsp&nbsp
