--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@ title: Home
   <h4>Welcome!</h4>
   <p style="text-align: justify;">
   
-  Currently, I am working as an AI Engineer at <a href="https://www.mayoclinic.org/">Mayo Clinic</a>, through <a href="https://www.citiustech.com/">CitiusTech</a>, Inc. My speciality lies in healthcare AI for medical provider operations using large language models (LLMs). 
+  Currently, I am working as an AI Engineer at <a href="https://www.mayoclinic.org/">Mayo Clinic</a>, through <a href="https://www.citiustech.com/">CitiusTech Inc</a>. My speciality lies in healthcare AI for medical provider operations using large language models (LLMs). 
+
+  <br><br>
 
   Prior to joining Mayo Clinic, I was a full-time researcher at UMass Lowell and University of Minnesota, studying natural language processing (NLP) and human-computer interaction (HCI). My expertise lies in large language models (LLMs) evaluation & alignment, human-AI collaboration for LLM domain specialization, and AI solution development for real-world business challenges. With 4 years of professional AI experience, I have published several papers in top-tier AI conferences, such as ACL, EMNLP, COLING, and CHI. Please refer to my google scholar profile. 
+  
+  <br><br>
 
   Before that, I earned my Master's in Computer Science from <a href="https://www.umass.edu/">University of Massachusetts Amherst</a> in 2023 and Bachelor's in CS/Math from from <a href="https://wooster.edu/">The College of Wooster</a> in 2021.
   </p>
@@ -28,7 +32,7 @@ title: Home
   Also, I worked on socially-aware natural language processing (NLP) technologies that better <b>aligned with human reasoning</b> and promoted <b>diversity and equity</b>.  -->
   <!-- </p> -->
 
-  <p>Open to full-time AI engineer opportunities in the U.S., with NLP specializations in healthcare areas! </p>
+  <!-- <p>Open to full-time AI engineer opportunities in the U.S., with NLP specializations in healthcare areas! </p> -->
 
   <p> <b>[Updated Feb 2025]</b> Here is my full <a href="/assets/cv/cv_feb25.pdf">CV</a>.</p>
 
