--- a/__redirect.html
+++ b/__redirect.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>About Minhwa Lee</title> 
-    <meta http-equiv="refresh" content="0; URL=https://mimn97.github.io/" />
-</head>
-
-<body>
-</body>
-
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://minsoodal.github.io/">
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    <p>If you are not redirected, <a href="https://minsoodal.github.io/">click here to visit a new website</a>.</p>
+  </body>
 </html>
