--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
----
+<!-- ---
 layout: default
 title: Home
----
+--- -->
 <!-- ========== BIO ========== -->
-<div class="docs-section" id="about">
-  <h4>Welcome!</h4>
-  <p style="text-align: justify;">
+<!-- <div class="docs-section" id="about"> -->
+  <!-- <h4>Welcome!</h4> -->
+  <!-- <p style="text-align: justify;">
   
   Currently, I am working as an AI Engineer at <a href="https://www.mayoclinic.org/">Mayo Clinic</a>, through <a href="https://www.citiustech.com/">CitiusTech Inc</a>. My speciality lies in healthcare AI for medical provider operations using large language models (LLMs). 
 
@@ -16,7 +16,7 @@ title: Home
   <br><br>
 
   Before that, I earned my Master's in Computer Science from <a href="https://www.umass.edu/">University of Massachusetts Amherst</a> in 2023 and Bachelor's in CS/Math from from <a href="https://wooster.edu/">The College of Wooster</a> in 2021.
-  </p>
+  </p> -->
 
   <!-- <h5>Research Areas</h5> -->
   <!-- <p style="text-align: justify;"> -->
@@ -34,7 +34,7 @@ title: Home
 
   <!-- <p>Open to full-time AI engineer opportunities in the U.S., with NLP specializations in healthcare areas! </p> -->
 
-  <p> <b>[Updated Feb 2025]</b> Here is my full <a href="/assets/cv/cv_feb25.pdf">CV</a>.</p>
+  <!-- <p> <b>[Updated Feb 2025]</b> Here is my full <a href="/assets/cv/cv_feb25.pdf">CV</a>.</p> -->
 
   <!-- <p>Here are some keywords: </p>
   <ul>
@@ -70,7 +70,7 @@ title: Home
   <!-- Previously, I have extracted meaningful insights about public health from different sources of unstructured data (e.g., CDC behavioral risk survey, clinical notes, social media posts, geospatial data) using data mining and NLP approaches.  -->
   <!-- I am also interested in widening my research interests to causal inference on human behaviors and social structures through online data.  -->
   
-</div>
+<!-- </div> -->
 
 <!-- <div class="docs-section" id="prospective-students">  
   <h4>Prospective Students</h4>
@@ -83,7 +83,7 @@ title: Home
 </div> -->
 
 <!-- ========== News ========== -->
-<div class="docs-section" id="news">
+<!-- <div class="docs-section" id="news">
   <h4>Announcements</h4>
   <div style="height:300px; width:auto; border:1px solid #ccc; overflow:auto;">
     <ul>
@@ -136,25 +136,25 @@ title: Home
       </li>
     </ul>
   </div>
-</div>
+</div> -->
 
 <!-- ========== PUBLICATIONS ========== -->
-<div class="docs-section" id="publications">
-  <h4>Publications</h4>
+<!-- <div class="docs-section" id="publications"> -->
+  <!-- <h4>Publications</h4>
 
   <p>Most recent publications on <a href="{{ site.data.main_info.google_scholar }}" target="_blank">Google Scholar</a>.<br/>
   <sup>‡</sup> indicates equal contribution.
-  </p>
+  </p> -->
 
-  <ul class="tab-nav">
+  <!-- <ul class="tab-nav">
     <li><div class="button active" data-ref="#papers-2025">2025</div></li>
     <li><div class="button" data-ref="#papers-2024">2024</div></li>
     <li><div class="button" data-ref="#papers-2023">2023</div></li>
     <li><div class="button" data-ref="#papers-all">All</div></li>
-  </ul>
+  </ul> -->
 
   <!-- 2025 -->
-  <div class="tab-content">
+  <!-- <div class="tab-content">
     <div class="tab-pane active" id="papers-2025">
       {% assign papers_2025 = site.data.publications.papers | where: "year", "2025" %}
       {% for paper in papers_2025 %}
@@ -188,8 +188,8 @@ title: Home
           <p><b style="color:blue"><i>{{ paper.venue }}</i></b></p>
         </div>
       {% endfor %}
-    </div>    
-    <div class="tab-pane" id="papers-2024">
+    </div>     -->
+    <!-- <div class="tab-pane" id="papers-2024">
       {% assign papers_2024 = site.data.publications.papers | where: "year", "2024" %}
       {% for paper in papers_2024 %}
         <div class="paper">
@@ -222,9 +222,9 @@ title: Home
           <p><b style="color:blue"><i>{{ paper.venue }}</i></b></p>
         </div>
       {% endfor %}
-    </div>
+    </div> -->
 
-    <div class="tab-pane" id="papers-2023">
+    <!-- <div class="tab-pane" id="papers-2023">
       {% assign papers_2023 = site.data.publications.papers | where: "year", "2023" %}
       {% for paper in papers_2023 %}
       <div class="paper">
@@ -257,7 +257,7 @@ title: Home
         <p><b style="color:blue"><i>{{ paper.venue }}</i></b></p>
       </div>
       {% endfor %}
-    </div>
+    </div> -->
 
   <!-- <div class="tab-content">
     <div class="tab-pane active" id="papers-selected">
@@ -297,7 +297,7 @@ title: Home
       {% endfor %}
     </div> -->
 
-    <div class="tab-pane" id="papers-all">
+    <!-- <div class="tab-pane" id="papers-all">
       {% for paper in site.data.publications.papers %}
           <div class="paper">
             <p class="title"><b>{{ paper.title }}</b>
@@ -323,9 +323,9 @@ title: Home
             </div>
           </div>
         {% endfor %}
-    </div>
+    </div> -->
   <!-- </div> -->
-</div>
+<!-- </div> -->
 
 <!-- ========== PROJECTS ==========  -->
  
@@ -434,4 +434,23 @@ title: Home
 
 <!-- This website was built based on a template by <a href="http://www.martinsaveski.com/"> Prof. Martin Saveski</a>. Thank you for sharing! -->
 
-</div>
+<!-- </div> -->
+
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5; URL='https://minsoodal.github.io'" />
+    <title>Redirecting to https://minsoodal.github.io...</title>
+    <script>
+      setTimeout(function () {
+        window.location.href = "https://minsoodal.github.io";
+      }, 5000);
+    </script>
+  </head>
+  <body>
+    <p>You are being redirected to <a href="https://minsoodal.github.io">https://minsoodal.github.io</a> in 5 seconds. If not automatically redirected, please click the link.</p>
+  </body>
+</html>
